Added resources, changed styles, made visual page.

--- a/visual.html
+++ b/visual.html
@@ -29,8 +29,10 @@
       </div>
     </div>
     <div class="body">
-      <section id="photos">
-        <img src="res/marfa/P1060472.jpg" alt="hammock"/>
+      <section id="projects">
+        <img src="res/atx/P1060414.jpg" alt="atx skyline"/>
+        <img src="res/marfa/P1060080.jpg" alt="prada building"/>
+        <img src="res/small/P1060034.jpg" alt="small man on train tracks"/>
       </section>
     </div>
   </body>
