Changed styles for visual page.

--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
   <body>
     <div class="header">
       <h1 id="blog-title">
-        delia stephens
+        <a href="index.html">delia stephens</a>
       </h1>
       <div class="nav>"
         <ul id="nav-buttons">
           <li><a href="visual.html">visual</a></li>
-          <li><a href="#">github</a></li>
+          <li><a href="https://github.com/deliastephens">github</a></li>
           <li><a href="#">aero/astro</a></li>
+          <li><a href="#">about</a></li>
         </ul>
       </div>
     </div>
