--- a/visual.html
+++ b/visual.html
@@ -18,21 +18,38 @@
   <body>
     <div class="header">
       <h1 id="blog-title">
-        delia stephens
+        <a href="index.html">delia stephens</a>
       </h1>
       <div class="nav>"
         <ul id="nav-buttons">
           <li><a href="visual.html">visual</a></li>
-          <li><a href="#">github</a></li>
+          <li><a href="https://github.com/deliastephens">github</a></li>
           <li><a href="#">aero/astro</a></li>
+          <li><a href="#">about</a></li>
         </ul>
       </div>
     </div>
     <div class="body">
-      <section id="projects">
-        <img src="res/atx/P1060414.jpg" alt="atx skyline"/>
-        <img src="res/marfa/P1060080.jpg" alt="prada building"/>
-        <img src="res/small/P1060034.jpg" alt="small man on train tracks"/>
+      <section class="projects">
+        <div class="img-container">
+          <img src="res/atx/P1060414.jpg" alt="atx skyline"/>
+          <div class="middle">
+            <div class="text">
+              <h1 class="project-title">atx</h1>
+              <p class="project-description">photos from the city i grew up in</p>
+            </div>
+          </div>
+        </div>
+        <div class="img-container">
+          <img src="res/marfa/P1060080.jpg" alt="prada building"/>
+          <div class="middle">
+            <div class="text">
+              <h1 class="project-title">wexas</h1>
+                <p class="project-description">adventures in west texas</p>
+            </div>
+          </div>
+        </div>
+          <!-- <img src="res/small/P1060034.jpg" alt="small man on train tracks"/> -->
       </section>
     </div>
   </body>
