Added image expansion and atx project description.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,42 @@
       </div>
     </div>
     <div class="body">
-      <section id="photos">
-        <img src="res/marfa/P1060472.jpg" alt="hammock"/>
+      <section class="photos">
+        <img src="res/atx/P1060403.jpg" alt="skyline"/>
+        <img src="res/atx/P1060774.jpg" alt="img"/>
+        <img src="res/atx/P1060414.jpg" alt="img"/>
+        <img src="res/atx/P1060784.jpg" alt="img"/>
+        <img src="res/atx/P1060797.jpg" alt="img"/>
+        <img src="res/atx/P1060802.jpg" alt="img"/>
+        <img src="res/atx/P1060860.jpg" alt="img"/>
+        <img src="res/atx/P1060865.jpg" alt="img"/>
+        <img src="res/atx/P1060881.jpg" alt="img"/>
+        <img src="res/atx/P1060885.jpg" alt="img"/>
+        <img src="res/atx/P1060942.jpg" alt="img"/>
+        <img src="res/atx/P1060943.jpg" alt="img"/>
+        <img src="res/atx/P1060948.jpg" alt="img"/>
+        <img src="res/atx/P1060959.jpg" alt="img"/>
+        <img src="res/atx/P1060973.jpg" alt="img"/>
+        <img src="res/marfa/P1060080.jpg" alt="img"/>
+        <img src="res/marfa/P1060463.jpg" alt="img"/>
+        <img src="res/marfa/P1060472.jpg" alt="img"/>
+        <img src="res/marfa/P1060512.jpg" alt="img"/>
+        <img src="res/marfa/P1060526.jpg" alt="img"/>
+        <img src="res/marfa/P1060531.jpg" alt="img"/>
+        <img src="res/marfa/P1060539.jpg" alt="img"/>
+        <img src="res/marfa/P1060540.jpg" alt="img"/>
+        <img src="res/marfa/P1060548.jpg" alt="img"/>
+        <img src="res/marfa/P1060560.jpg" alt="img"/>
+        <img src="res/marfa/P1060561.jpg" alt="img"/>
+        <img src="res/marfa/P1060562.jpg" alt="img"/>
+        <img src="res/marfa/P1060565.jpg" alt="img"/>
+        <img src="res/marfa/P1060649.jpg" alt="img"/>
+        <img src="res/marfa/P1060678.jpg" alt="img"/>
+        <img src="res/marfa/P1060690.jpg" alt="img"/>
+        <img src="res/marfa/P1060698.jpg" alt="img"/>
+        <img src="res/marfa/P1060705.jpg" alt="img"/>
+        <img src="res/marfa/P1060725.jpg" alt="img"/>
+        <img src="res/small/P1060034.jpg" alt="img"/>
       </section>
     </div>
   </body>
