--- a/visual.html
+++ b/visual.html
@@ -32,24 +32,40 @@
     <div class="body">
       <section class="projects">
         <div class="img-container">
-          <img src="res/atx/P1060414.jpg" alt="atx skyline"/>
-          <div class="middle">
-            <div class="text">
-              <h1 class="project-title">atx</h1>
-              <p class="project-description">photos from the city i grew up in</p>
+          <a class="visual-link" href="atx.html">
+            <img src="res/atx/P1060414.jpg" alt="atx skyline"/>
+            <div class="middle">
+              <div class="text">
+                <h1 class="project-title">atx</h1>
+                <p class="project-description">photos from the city i grew up in</p>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
         <div class="img-container">
-          <img src="res/marfa/P1060080.jpg" alt="prada building"/>
-          <div class="middle">
-            <div class="text">
-              <h1 class="project-title">wexas</h1>
+          <a class="visual-link" href="wexas.html">
+            <img src="res/marfa/P1060080.jpg" alt="prada building"/>
+            <div class="middle">
+              <div class="text">
+                <h1 class="project-title">
+                    wexas
+                </h1>
                 <p class="project-description">adventures in west texas</p>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
-          <!-- <img src="res/small/P1060034.jpg" alt="small man on train tracks"/> -->
+        <div class="img-container">
+          <a class="visual-link" href="small.html">
+            <img src="res/small/P1060034.jpg" alt="small man on train tracks"/>
+            <div class="middle">
+              <div class="text">
+                <h1 class="project-title">small</h1>
+                  <p class="project-description">a brief reminder that we are pretty tiny</p>
+              </div>
+            </div>
+          </a>
+        </div>
       </section>
     </div>
   </body>
