Changed fonts, added wexas page.

--- a/atx.html
+++ b/atx.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
 
     <title>delia stephens</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
+
+
+
     <meta name="description" content="delia stephens">
     <meta name="author" content="Delia Stephens">
 
@@ -36,8 +40,7 @@
         </h1>
         <p>
           in 2 months, i am going to leave a city that i've lived in for eighteen years.
-          here is a collection of photographs that summarize my experience of austin, texas
-          for the past eighteen years.
+          here is a collection of photographs that summarize my experience of austin, texas.
         </p>
       </div>
       <section class="atx-photos">
