--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
+
 
     <title>delia stephens</title>
     <meta name="description" content="delia stephens">
@@ -30,6 +32,9 @@
       </div>
     </div>
     <div class="body">
+      <!-- PHOTOS BELOW
+          Put new photos at the top of this list.
+      -->
       <section class="photos">
         <img src="res/atx/P1060403.jpg" alt="skyline"/>
         <img src="res/atx/P1060774.jpg" alt="img"/>
