--- a/visual.html
+++ b/visual.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
 
     <title>delia stephens</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
+
+
+
     <meta name="description" content="delia stephens">
     <meta name="author" content="Delia Stephens">
 
