--- a/atx.html
+++ b/atx.html
@@ -28,7 +28,7 @@
         <ul id="nav-buttons">
           <li><a href="visual.html">visual</a></li>
           <li><a href="https://github.com/deliastephens">github</a></li>
-          <li><a href="#">aero/astro</a></li>
+          <li><a href="aero.html">aero/astro</a></li>
           <li><a href="#">about</a></li>
         </ul>
       </div>
@@ -39,8 +39,7 @@
           atx
         </h1>
         <p>
-          in 2 months, i am going to leave a city that i've lived in for eighteen years.
-          here is a collection of photographs that summarize my experience of austin, texas.
+          born and raised in austin, texas, i have always loved the city. here are some pictures that remind me of home.
         </p>
       </div>
       <section class="atx-photos">
