--- a/wexas.html
+++ b/wexas.html
@@ -27,7 +27,7 @@
         <ul id="nav-buttons">
           <li><a href="visual.html">visual</a></li>
           <li><a href="https://github.com/deliastephens">github</a></li>
-          <li><a href="#">aero/astro</a></li>
+          <li><a href="aero.html">aero/astro</a></li>
           <li><a href="#">about</a></li>
         </ul>
       </div>
