--- a/aero.html
+++ b/aero.html
@@ -36,38 +36,14 @@
     <div class="body">
       <section class="projects">
         <div class="img-container">
-          <a class="visual-link" href="technical.html">
-            <img src="res/technical/BMW-Crop-2.png" alt="my dad's motorcycle"/>
+          <a class="visual-link" href="notes.html">
+            <img src="res/notes/overview.png" alt="my dad's motorcycle"/>
             <div class="middle">
               <div class="text">
                 <h1 class="project-title">
-                    technical
+                    notes
                 </h1>
-                <p class="project-description">some drawings and designs i've done</p>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="img-container">
-          <a class="visual-link" href="atx.html">
-            <img src="res/atx/P1060414.jpg" alt="atx skyline"/>
-            <div class="middle">
-              <div class="text">
-                <h1 class="project-title">atx</h1>
-                <p class="project-description">photos from the city i grew up in</p>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="img-container">
-          <a class="visual-link" href="wexas.html">
-            <img src="res/marfa/P1060080.jpg" alt="prada building"/>
-            <div class="middle">
-              <div class="text">
-                <h1 class="project-title">
-                    wexas
-                </h1>
-                <p class="project-description">adventures in west texas</p>
+                <p class="project-description">how i start to understand things</p>
               </div>
             </div>
           </a>
