--- a/index.html
+++ b/index.html
@@ -32,46 +32,17 @@
       </div>
     </div>
     <div class="body">
-      <!-- PHOTOS BELOW
-          Put new photos at the top of this list.
-      -->
-      <section class="photos">
-        <img src="res/atx/P1060403.jpg" alt="skyline"/>
-        <img src="res/atx/P1060774.jpg" alt="img"/>
-        <img src="res/atx/P1060414.jpg" alt="img"/>
-        <img src="res/atx/P1060784.jpg" alt="img"/>
-        <img src="res/atx/P1060797.jpg" alt="img"/>
-        <img src="res/atx/P1060802.jpg" alt="img"/>
-        <img src="res/atx/P1060860.jpg" alt="img"/>
-        <img src="res/atx/P1060865.jpg" alt="img"/>
-        <img src="res/atx/P1060881.jpg" alt="img"/>
-        <img src="res/atx/P1060885.jpg" alt="img"/>
-        <img src="res/atx/P1060942.jpg" alt="img"/>
-        <img src="res/atx/P1060943.jpg" alt="img"/>
-        <img src="res/atx/P1060948.jpg" alt="img"/>
-        <img src="res/atx/P1060959.jpg" alt="img"/>
-        <img src="res/atx/P1060973.jpg" alt="img"/>
-        <img src="res/marfa/P1060080.jpg" alt="img"/>
-        <img src="res/marfa/P1060463.jpg" alt="img"/>
-        <img src="res/marfa/P1060472.jpg" alt="img"/>
-        <img src="res/marfa/P1060512.jpg" alt="img"/>
-        <img src="res/marfa/P1060526.jpg" alt="img"/>
-        <img src="res/marfa/P1060531.jpg" alt="img"/>
-        <img src="res/marfa/P1060539.jpg" alt="img"/>
-        <img src="res/marfa/P1060540.jpg" alt="img"/>
-        <img src="res/marfa/P1060548.jpg" alt="img"/>
-        <img src="res/marfa/P1060560.jpg" alt="img"/>
-        <img src="res/marfa/P1060561.jpg" alt="img"/>
-        <img src="res/marfa/P1060562.jpg" alt="img"/>
-        <img src="res/marfa/P1060565.jpg" alt="img"/>
-        <img src="res/marfa/P1060649.jpg" alt="img"/>
-        <img src="res/marfa/P1060678.jpg" alt="img"/>
-        <img src="res/marfa/P1060690.jpg" alt="img"/>
-        <img src="res/marfa/P1060698.jpg" alt="img"/>
-        <img src="res/marfa/P1060705.jpg" alt="img"/>
-        <img src="res/marfa/P1060725.jpg" alt="img"/>
-        <img src="res/small/P1060034.jpg" alt="img"/>
-      </section>
+      <img src="res/delia.jpg" alt="Me!" class="avatar">
+
+      <p class="about">
+        Hi! I'm Delia, a sophomore at MIT pursuing a degree in aeronautical engineering.
+      </p>
+      <p class="about">
+        Right now, I spend most of my time <a href="visual.html">taking pictures</a>, making <a href="https://github.com/deliastephens/interrobang">useless things</a>, and <a href="https://www.mitspokes.com/">riding my bicycle</a>. I also occasionally <a href="https://medium.com/@deliaornodelia">ramble nonsenically</a> and fly drones. In the fall, I play field hockey for MIT's varsity team and enjoy the nice weather.
+      </p>
+      <p class="about">
+        I'm interested in stuff that goes fast--rockets, drones, planes, and bikes. I love breaking stuff in my garage at home or on the side of the road halfway across the country. Currently in the works are my drone operator's license and a single-speed bike conversion. In the past, I've built a rocket that carries a GoPro, done some drone photography, biked across the country, and worked on various other personal projects.
+      </p>
     </div>
   </body>
 </html>
