--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
         <ul id="nav-buttons">
           <li><a href="visual.html">visual</a></li>
           <li><a href="https://github.com/deliastephens">github</a></li>
-          <li><a href="#">aero/astro</a></li>
+          <li><a href="aero.html">aero/astro</a></li>
           <li><a href="#">about</a></li>
         </ul>
       </div>
     </div>
     <div class="body">
+      <div class="poo">
       <img src="res/delia.jpg" alt="Me!" class="avatar">
-
+      </div>
       <p class="about">
         Hi! I'm Delia, a sophomore at MIT pursuing a degree in aeronautical engineering.
       </p>
