--- a/aero.html
+++ b/aero.html
@@ -29,7 +29,7 @@
           <li><a href="visual.html">visual</a></li>
           <li><a href="https://github.com/deliastephens">github</a></li>
           <li><a href="aero.html">aero/astro</a></li>
-          <li><a href="#">about</a></li>
+          <li><a href="projects.html">other</a></li>
         </ul>
       </div>
     </div>
@@ -44,6 +44,19 @@
                     notes
                 </h1>
                 <p class="project-description">how i start to understand things</p>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="img-container">
+          <a class="visual-link" href="cameroc.html">
+            <img src="res/cameroc/rocket_launch.jpg" alt="rocket in flight"/>
+            <div class="middle">
+              <div class="text">
+                <h1 class="project-title">
+                    cameroc
+                </h1>
+                <p class="project-description">cluster D-motor rocket to launch a GoPro</p>
               </div>
             </div>
           </a>
