--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li><a href="visual.html">visual</a></li>
           <li><a href="https://github.com/deliastephens">github</a></li>
           <li><a href="aero.html">aero/astro</a></li>
-          <li><a href="#">about</a></li>
+          <li><a href="projects.html">other</a></li>
         </ul>
       </div>
     </div>
