--- a/notes.html
+++ b/notes.html
@@ -27,7 +27,7 @@
           <li><a href="visual.html">visual</a></li>
           <li><a href="https://github.com/deliastephens">github</a></li>
           <li><a href="aero.html">aero/astro</a></li>
-          <li><a href="#">about</a></li>
+          <li><a href="projects.html">other</a></li>
         </ul>
       </div>
     </div>
@@ -41,20 +41,22 @@
       <p>
         Thus far, I've taken Materials and Structures (16.001), Signals and Systems (16.002), Intro to Computer Programming and Data Science in Python (6.00), and the MIT GIRs (Physics I and II, Chemistry, Biology, Calculus I and II, and Differential Equations). For each of these classes, I take extensive notes.
       </p>
+      <p class="single">
         <a href="docs/materials-unit-1.pdf"> Materials & Structures (16.001), Unit 1 </a>
-      <p>
+      </p>
+      <p class="single">
         <a href="docs/materials-unit-2.pdf"> Materials & Structures (16.001), Unit 2 </a>
       </p>
-      <p>
+      <p class="single">
         <a href="docs/signals-summary.pdf"> Signals & Systems (16.002) </a>
       </p>
-      <p>
+      <p class="single">
         <a href="docs/diff-eq.pdf"> Differential Equations (18.03) </a>
       </p>
-      <p>
+      <p class="single">
         <a href="docs/bio-summary.pdf"> Biology (7.013) </a>
       </p>
-      <p>
+      <p class="single">
         <a href="docs/chem-summary.pdf"> Chemistry (3.091) </a>
       </p>
     </div>
