--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
       <p class="heading">
         <a href="https://patents.google.com/patent/US20150172754"> Systems and Methods for Controlling Broadcast Audio Volume </a>
       </p>
-      <img src="res/projects/mutestreams.png" align="right" height="300px">
+      <img src="res/projects/mutestreams.PNG" align="right" height="300px">
       <p>
         In high school, I had an idea: what if your TV could be muted automatically? While there existed programs to evaluate changes
         in television volume and search closed captioning devices for "trigger words", no robust, easy-to-use system existed to mute a 
