--- a/cameroc.html
+++ b/cameroc.html
@@ -60,6 +60,9 @@
         I even built anything. The new iteration had laser-cut fins, was noticeably shorted, had a compatible nose cone with the body tube, and was much better.
         It launched the spring of my senior year, landed in a tree, and was recovered (along with the GoPro) that same afternoon.
     </div>
+    <div id="footer">
+      <p>Handmade by Delia in 2019</p>
+    </div>
   </body>
 </html>
  
