--- a/aero.html
+++ b/aero.html
@@ -63,5 +63,8 @@
         </div>
       </section>
     </div>
+    <div id="footer">
+      <p>Handmade by Delia in 2019</p>
+    </div>
   </body>
 </html>
