--- a/wexas.html
+++ b/wexas.html
@@ -64,5 +64,8 @@
         <a href="res/marfa/P1060725.jpg"><img src="res/marfa/P1060725.jpg" alt="img"/>
       </section>
     </div>
+    <div id="footer">
+      <p>Handmade by Delia in 2019</p>
+    </div>
   </body>
 </html>
