Added more photos

--- a/cameroc.html
+++ b/cameroc.html
@@ -60,6 +60,21 @@
         I even built anything. The new iteration had laser-cut fins, was noticeably shorted, had a compatible nose cone with the body tube, and was much better.
         It launched the spring of my senior year, landed in a tree, and was recovered (along with the GoPro) that same afternoon.
       </p>
+      <p>
+        Below are some of the notes, designs, etc. for this rocket. I spent a long time iterating, going through even more designs than are available here.
+      </p>
+      <div class="extra-small-img">
+        <img src="res/cameroc/design-process-1.PNG" alt="Thoughts about design">
+      </div>
+      <div class="extra-small-img">
+        <img src="res/cameroc/design-process-2.PNG" alt="more thoughts">
+      </div>
+      <div class="extra-small-img">
+        <img src="res/cameroc/motor-housing-1.PNG" alt="motor housing">
+      </div>
+      <div class="extra-small-img">
+        <img src="res/cameroc/motor-housing-2.PNG" alt="motor housing">
+      </div>
     </div>
   </body>
 </html>
