--- a/atx.html
+++ b/atx.html
@@ -42,23 +42,25 @@
           born and raised in austin, texas, i have always loved the city. here are some pictures that remind me of home.
         </p>
       </div>
+      <p class="single">
       <section class="atx-photos">
         <a href="res/atx/P1060403.jpg"><img src="res/atx/P1060403.jpg" alt="skyline"/></a>
-        <a href="res/atx/P1060774.jpg"><img src="res/atx/P1060774.jpg" alt="img"/>
-        <a href="res/atx/P1060414.jpg"><img src="res/atx/P1060414.jpg" alt="img"/>
-        <a href="res/atx/P1060784.jpg"><img src="res/atx/P1060784.jpg" alt="img"/>
-        <a href="res/atx/P1060797.jpg"><img src="res/atx/P1060797.jpg" alt="img"/>
-        <a href="res/atx/P1060802.jpg"><img src="res/atx/P1060802.jpg" alt="img"/>
-        <a href="res/atx/P1060860.jpg"><img src="res/atx/P1060860.jpg" alt="img"/>
-        <a href="res/atx/P1060865.jpg"><img src="res/atx/P1060865.jpg" alt="img"/>
-        <a href="res/atx/P1060881.jpg"><img src="res/atx/P1060881.jpg" alt="img"/>
-        <a href="res/atx/P1060885.jpg"><img src="res/atx/P1060885.jpg" alt="img"/>
-        <a href="res/atx/P1060942.jpg"><img src="res/atx/P1060942.jpg" alt="img"/>
-        <a href="res/atx/P1060943.jpg"><img src="res/atx/P1060943.jpg" alt="img"/>
-        <a href="res/atx/P1060948.jpg"><img src="res/atx/P1060948.jpg" alt="img"/>
-        <a href="res/atx/P1060959.jpg"><img src="res/atx/P1060959.jpg" alt="img"/>
-        <a href="res/atx/P1060973.jpg"><img src="res/atx/P1060973.jpg" alt="img"/>
+        <a href="res/atx/P1060774.jpg"><img src="res/atx/P1060774.jpg" alt="img"/></a>
+        <a href="res/atx/P1060414.jpg"><img src="res/atx/P1060414.jpg" alt="img"/></a>
+        <a href="res/atx/P1060784.jpg"><img src="res/atx/P1060784.jpg" alt="img"/></a>
+        <a href="res/atx/P1060797.jpg"><img src="res/atx/P1060797.jpg" alt="img"/></a>
+        <a href="res/atx/P1060802.jpg"><img src="res/atx/P1060802.jpg" alt="img"/></a>
+        <a href="res/atx/P1060860.jpg"><img src="res/atx/P1060860.jpg" alt="img"/></a>
+        <a href="res/atx/P1060865.jpg"><img src="res/atx/P1060865.jpg" alt="img"/></a>
+        <a href="res/atx/P1060881.jpg"><img src="res/atx/P1060881.jpg" alt="img"/></a>
+        <a href="res/atx/P1060885.jpg"><img src="res/atx/P1060885.jpg" alt="img"/></a>
+        <a href="res/atx/P1060942.jpg"><img src="res/atx/P1060942.jpg" alt="img"/></a>
+        <a href="res/atx/P1060943.jpg"><img src="res/atx/P1060943.jpg" alt="img"/></a>
+        <a href="res/atx/P1060948.jpg"><img src="res/atx/P1060948.jpg" alt="img"/></a>
+        <a href="res/atx/P1060959.jpg"><img src="res/atx/P1060959.jpg" alt="img"/></a>
+        <a href="res/atx/P1060973.jpg"><img src="res/atx/P1060973.jpg" alt="img"/></a>
       </section>
+    </p>
     </div>
   </body>
 </html>
