--- a/wexas.html
+++ b/wexas.html
@@ -46,22 +46,22 @@
         <a href="res/marfa/P1060080.jpg"><img src="res/marfa/P1060080.jpg" alt="img"/></a>
         <a href="res/marfa/P1060463.jpg"><img src="res/marfa/P1060463.jpg" alt="img"/></a>
         <a href="res/marfa/P1060472.jpg"><img src="res/marfa/P1060472.jpg" alt="img"/></a>
-        <a href="res/marfa/P1060512.jpg"><img src="res/marfa/P1060512.jpg" alt="img"/>
-        <a href="res/marfa/P1060526.jpg"><img src="res/marfa/P1060526.jpg" alt="img"/>
-        <a href="res/marfa/P1060531.jpg"><img src="res/marfa/P1060531.jpg" alt="img"/>
-        <a href="res/marfa/P1060539.jpg"><img src="res/marfa/P1060539.jpg" alt="img"/>
-        <a href="res/marfa/P1060540.jpg"><img src="res/marfa/P1060540.jpg" alt="img"/>
-        <a href="res/marfa/P1060548.jpg"><img src="res/marfa/P1060548.jpg" alt="img"/>
-        <a href="res/marfa/P1060560.jpg"><img src="res/marfa/P1060560.jpg" alt="img"/>
-        <a href="res/marfa/P1060561.jpg"><img src="res/marfa/P1060561.jpg" alt="img"/>
-        <a href="res/marfa/P1060562.jpg"><img src="res/marfa/P1060562.jpg" alt="img"/>
-        <a href="res/marfa/P1060565.jpg"><img src="res/marfa/P1060565.jpg" alt="img"/>
-        <a href="res/marfa/P1060649.jpg"><img src="res/marfa/P1060649.jpg" alt="img"/>
-        <a href="res/marfa/P1060678.jpg"><img src="res/marfa/P1060678.jpg" alt="img"/>
-        <a href="res/marfa/P1060690.jpg"><img src="res/marfa/P1060690.jpg" alt="img"/>
-        <a href="res/marfa/P1060698.jpg"><img src="res/marfa/P1060698.jpg" alt="img"/>
-        <a href="res/marfa/P1060705.jpg"><img src="res/marfa/P1060705.jpg" alt="img"/>
-        <a href="res/marfa/P1060725.jpg"><img src="res/marfa/P1060725.jpg" alt="img"/>
+        <a href="res/marfa/P1060512.jpg"><img src="res/marfa/P1060512.jpg" alt="img"/></a>
+        <a href="res/marfa/P1060526.jpg"><img src="res/marfa/P1060526.jpg" alt="img"/></a>
+        <a href="res/marfa/P1060531.jpg"><img src="res/marfa/P1060531.jpg" alt="img"/></a>
+        <a href="res/marfa/P1060539.jpg"><img src="res/marfa/P1060539.jpg" alt="img"/></a>
+        <a href="res/marfa/P1060540.jpg"><img src="res/marfa/P1060540.jpg" alt="img"/></a>
+        <a href="res/marfa/P1060548.jpg"><img src="res/marfa/P1060548.jpg" alt="img"/></a>
+        <a href="res/marfa/P1060560.jpg"><img src="res/marfa/P1060560.jpg" alt="img"/></a>
+        <a href="res/marfa/P1060561.jpg"><img src="res/marfa/P1060561.jpg" alt="img"/></a>
+        <a href="res/marfa/P1060562.jpg"><img src="res/marfa/P1060562.jpg" alt="img"/></a>
+        <a href="res/marfa/P1060565.jpg"><img src="res/marfa/P1060565.jpg" alt="img"/></a>
+        <a href="res/marfa/P1060649.jpg"><img src="res/marfa/P1060649.jpg" alt="img"/></a>
+        <a href="res/marfa/P1060678.jpg"><img src="res/marfa/P1060678.jpg" alt="img"/></a>
+        <a href="res/marfa/P1060690.jpg"><img src="res/marfa/P1060690.jpg" alt="img"/></a>
+        <a href="res/marfa/P1060698.jpg"><img src="res/marfa/P1060698.jpg" alt="img"/></a>
+        <a href="res/marfa/P1060705.jpg"><img src="res/marfa/P1060705.jpg" alt="img"/></a>
+        <a href="res/marfa/P1060725.jpg"><img src="res/marfa/P1060725.jpg" alt="img"/></a>
       </section>
     </div>
   </body>
