--- a/aero.html
+++ b/aero.html
@@ -36,8 +36,21 @@
     <div class="body">
       <section class="projects">
         <div class="img-container">
+          <a class="visual-link" href="maja.html">
+            <img src="res/maja/materials.PNG" alt="Bormatec MAJA Project"/>
+            <div class="middle">
+              <div class="text">
+                <h1 class="project-title">
+                  Modeling MAJA
+                </h1>
+                <p class="project-description">building a custom drone model for PhoenixRC</p>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="img-container">
           <a class="visual-link" href="notes.html">
-            <img src="res/notes/overview.png" alt="my dad's motorcycle"/>
+            <img src="res/notes/overview.png" alt="notes i've taken"/>
             <div class="middle">
               <div class="text">
                 <h1 class="project-title">
