--- a/notes.html
+++ b/notes.html
@@ -33,7 +33,7 @@
     </div>
     <div class="body">
       <div class="header-img">
-        <img src="res/notes/stresses.png" alt="Notes" class="overview">
+        <img src="res/notes/stresses.PNG" alt="Notes" class="overview">
       </div>
       <p>
         As a student, my first priority is my school work. Sometimes, that can be boring, so I like to focus on the aesthetic side of my notetaking. Below is a selection of some of my favorite notes as well as full PDF summaries of the classes I've taken thus far. You can see how I start to think about and understand things in my studies. There are also sometimes jokes.
@@ -62,4 +62,3 @@
     </div>
   </body>
 </html>
- 
