--- a/projects.html
+++ b/projects.html
@@ -40,12 +40,12 @@
       </p>
       <img src="res/projects/mutestreams.PNG" align="right" height="300px">
       <p>
-        In high school, I had an idea: what if your TV could be muted automatically? While there existed programs to evaluate changes
-        in television volume and search closed captioning devices for "trigger words", no robust, easy-to-use system existed to mute a 
+        In middle school, I had an idea: what if your TV could be muted automatically? While there existed programs to evaluate changes
+        in television volume and search closed captioning devices for "trigger words", no robust, easy-to-use system existed to mute a
         television automatically. Thus, MuteStreams was born.
       </p>
       <p>
-        The invention was an easy way for "subscribers" to have their televisions automatically muted by more vigilant users. These vigilant 
+        The invention was an easy way for "subscribers" to have their televisions automatically muted by more vigilant users. These vigilant
         users would mute their televisions when a commercial came on. This "mute signal", interpreted by a device plugged into the set-top box
         and comprised of the mute instance and a program number, would be sent by TCP/IP protocol to a remote server, aggregated with other mute signals,
         and distributed across a network to the subscribers.
@@ -64,7 +64,7 @@
       </p>
       <img src="res/projects/DSCF1500.jpg" align="right" height="300px">
       <p>
-        This past summer, I biked across the country, hosting workshops about science, technology, engineering, and math along the way. We stayed at 60+ 
+        Summer 2018, I biked across the country, hosting workshops about science, technology, engineering, and math along the way. We stayed at 60+
         homes, taught over 200 students, and raised a little under $30,000 to make this program happen.
       </p>
       <p>
@@ -76,14 +76,13 @@
       <p>
         All in all, the trip was an excellent experience. I learned about myself (hills are hard), how I interact with others (group decisions are also hard),
         and how to accomplish things that need to get done, even if I don't really want to. I was constantly exhausted, eating over 3000 calories a day, and
-        biking 70+ miles per day. We met so many fantastic people (including <a href="https://lostbyway.com/">Greg</a>, who is biking around the world), stayed
+        biking 70+ miles per day. We met so many fantastic people (including <a href="https://lostbyway.com/">Greg</a>, who just finished biking around the entire world), stayed
         in so many fantastic places, and ate so much fantastic food.
       </p>
       <p>
-        Now, I fix up old bikes at school (current project: an old Raleigh Marathon with barely functional parts that I will be converting to a single speed) and
-        cycle for MIT Cycling. I think about a lot of problems while I'm on the bike, and I do truly enjoy the technical challenges of cycling long distances.
+        Now, I fix up old bikes at school and ride with the <a href="https://cycling.mit.edu/"> MIT Cycling Club</a>.
+        I think about a lot of problems while I'm on the bike, and I do truly enjoy the technical challenges of cycling long distances.
       </p>
     </div>
   </body>
 </html>
- 
