--- a/maja.html
+++ b/maja.html
@@ -88,7 +88,7 @@
       </div>
       <p>
         The rest of the battle came down to tuning; even though I had done a decent job scaling the aircraft,
-        I needed to fiddle with the center of gravity, trust provided by the motor, and lift the aircraft was generating.
+        I needed to fiddle with the center of gravity, thrust provided by the motor, and lift the aircraft was generating.
         At the end of this project, we ended up with a really fantastic training tool to get new pilots comfortable
         with the dynamics of an airframe similar to what they'll actually be flying. I became more proficient in Solidworks, got to
         see simulated instability, and was able to see a project through to completion.
