--- a/notes.html
+++ b/notes.html
@@ -36,10 +36,27 @@
         <img src="res/notes/stresses.PNG" alt="Notes" class="overview">
       </div>
       <p>
-        As a student, my first priority is my school work. Sometimes, that can be boring, so I like to focus on the aesthetic side of my notetaking. Below is a selection of some of my favorite notes as well as full PDF summaries of the classes I've taken thus far. You can see how I start to think about and understand things in my studies. There are also sometimes jokes.
+        As a student, my first priority is my school work.
+        Sometimes, that can be boring, so I like to focus on the aesthetic side of my notetaking.
+        Below is a selection of some of my favorite notes as well as full PDF summaries of the classes I've taken thus far.
+        You can see how I start to think about and understand things in my studies. There are also sometimes jokes.
       </p>
       <p>
-        Thus far, I've taken Materials and Structures (16.001), Signals and Systems (16.002), Intro to Computer Programming and Data Science in Python (6.00), and the MIT GIRs (Physics I and II, Chemistry, Biology, Calculus I and II, and Differential Equations). For each of these classes, I take extensive notes.
+        Thus far, I've taken
+        Fluid Dynamics (16.003),
+        Thermodynamics & Propulsion (16.004),
+        Fundamentals of Programming (6.009),
+        Materials and Structures (16.001),
+        Signals and Systems (16.002),
+        Intro to Computer Programming and Data Science in Python (6.00),
+        and the MIT GIRs (Physics I and II, Chemistry, Biology, Calculus I and II, and Differential Equations).
+        For each of these classes, I take extensive notes.
+      </p>
+      <p class="single">
+        <a href="docs/fluids-summary.pdf"> Fluid Dynamics (16.003)</a>
+      </p>
+      <p class="single">
+        <a href="docs/thermo-summary.pdf"> Thermodynamics & Propulsion (16.004)</a>
       </p>
       <p class="single">
         <a href="docs/materials-unit-1.pdf"> Materials & Structures (16.001), Unit 1 </a>
