--- a/projects.html
+++ b/projects.html
@@ -36,13 +36,17 @@
         Here's some of the other stuff I've worked on!
       </p>
       <p class="heading">
-        <a href="https://patents.google.com/patent/US20150172754"> Systems and Methods for Controlling Broadcast Audio Volume </a>
+        <a href="https://patents.google.com/patent/US20150172754"> MuteStreams </a>
       </p>
       <img src="res/projects/mutestreams.PNG" align="right" height="300px">
       <p>
         In middle school, I had an idea: what if your TV could be muted automatically? While there existed programs to evaluate changes
         in television volume and search closed captioning devices for "trigger words", no robust, easy-to-use system existed to mute a
         television automatically. Thus, MuteStreams was born.
+      </p>
+      <p>
+        For my invention, I was awarded two U.S. Patents: <a href="https://patents.justia.com/patent/9357259">Methods for Processing Mute Signals</a> and
+        <a href="https://patents.justia.com/patent/9210466">Systems and Methods for Controlling Broadcast Audio Volume</a>.
       </p>
       <p>
         The invention was an easy way for "subscribers" to have their televisions automatically muted by more vigilant users. These vigilant
