Made models publicly available.

--- a/maja.html
+++ b/maja.html
@@ -52,6 +52,11 @@
         I went from only baseline modeling experience to relative proficiency, producing a model that is similar
         in appearance and functionality to the Bormatec MAJA.
       </p>
+      <p>
+        Here is the <a href="https://www.dropbox.com/s/bznlgwdsif3fj17/blend_attempt_3.obj?dl=0"> Blender Mesh</a>,
+        and here is the <a href="https://www.dropbox.com/s/2xbmynz6k4qe7sc/assemb3.SLDASM?dl=0">SolidWorks Assembly</a>,
+        both available for download.
+      </p>
       <p class="heading">
         Modeling
       </p>
