--- a/aero.html
+++ b/aero.html
@@ -36,12 +36,25 @@
     <div class="body">
       <section class="projects">
         <div class="img-container">
+          <a class="visual-link" href="sitl.html">
+            <img src="https://github.com/deliastephens/FaultInjector/blob/master/res/FaultInjector.PNG?raw=true" alt="FaultInjector"/>
+            <div class="middle">
+              <div class="text">
+                <h1 class="project-title">
+                  FaultInjector 2.0
+                </h1>
+                <p class="project-description">development of a robust SITL UAV testing environment</p>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="img-container">
           <a class="visual-link" href="maja.html">
             <img src="res/maja/materials.PNG" alt="Bormatec MAJA Project"/>
             <div class="middle">
               <div class="text">
                 <h1 class="project-title">
-                  Modeling MAJA
+                  modeling MAJA
                 </h1>
                 <p class="project-description">building a custom drone model for PhoenixRC</p>
               </div>
