--- a/index.html
+++ b/index.html
@@ -39,10 +39,18 @@
         Hi! I'm Delia, a sophomore at MIT pursuing a degree in aeronautical engineering.
       </p>
       <p class="about">
-        Right now, I spend most of my time <a href="visual.html">taking pictures</a>, making <a href="https://github.com/deliastephens/interrobang">useless things</a>, and <a href="https://www.mitspokes.com/">riding my bicycle</a>. I also occasionally <a href="https://medium.com/@deliaornodelia">ramble nonsenically</a> and fly drones. In the fall, I play field hockey for MIT's varsity team and enjoy the nice weather.
+        Right now, I spend most of my time <a href="visual.html">taking pictures</a>,
+        making <a href="https://github.com/deliastephens/interrobang">useless things</a>,
+        and <a href="https://mitspokes.wixsite.com/2018">riding my bicycle</a>.
+        I also occasionally <a href="https://medium.com/@deliaornodelia">ramble nonsenically</a> and fly drones.
+        In the fall, I play field hockey for MIT's varsity team and enjoy the nice weather.
       </p>
       <p class="about">
-        I'm interested in stuff that goes fast--rockets, drones, planes, and bikes. I love breaking stuff in my garage at home or on the side of the road halfway across the country. Currently in the works are my drone operator's license and a single-speed bike conversion. In the past, I've built a rocket that carries a GoPro, done some drone photography, biked across the country, and worked on various other personal projects.
+        I'm interested in stuff that goes fast--rockets, drones, planes, and bikes.
+        I love breaking stuff in my garage at home or on the side of the road halfway across the country.
+        Currently in the works are my drone operator's license and a single-speed bike conversion.
+        In the past, I've built a rocket that carries a GoPro, done some drone photography,
+        biked across the country, and worked on various other personal projects.
       </p>
     </div>
   </body>
