--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <img src="res/delia.jpg" alt="Me!" class="avatar">
       </div>
       <p class="about">
-        Hi! I'm Delia, a sophomore at MIT pursuing a degree in aeronautical engineering.
+        Hi! I'm Delia, a <del>freshman</del> <del>sophomore</del> junior at MIT pursuing a degree in aeronautical engineering.
       </p>
       <p class="about">
         Right now, I spend most of my time <a href="visual.html">taking pictures</a>,
