--- a/visual.html
+++ b/visual.html
@@ -36,6 +36,19 @@
     <div class="body">
       <section class="projects">
         <div class="img-container">
+          <a class="visual-link" href="boston.html">
+            <img src="res/boston/citgo-crop.jpg" alt="boston, from the balcony"/>
+            <div class="middle">
+              <div class="text">
+                <h1 class="project-title">
+                    boston
+                </h1>
+                <p class="project-description">views from the balcony (and others)</p>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="img-container">
           <a class="visual-link" href="technical.html">
             <img src="res/technical/BMW-Crop-2.png" alt="my dad's motorcycle"/>
             <div class="middle">
