--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <img src="res/delia.jpg" alt="Me!" class="avatar">
       </div>
       <p class="about">
-        Hi! I'm Delia, a <del>freshman</del> <del>sophomore</del> junior at MIT pursuing a degree in aeronautical engineering.
+        Hi! I'm Delia, a <del>freshman</del> <del>sophomore</del> <del>junior</del> senior at MIT pursuing a degree in aeronautical engineering.
       </p>
       <p class="about">
         Right now, I spend most of my time <a href="visual.html">taking pictures</a>,
@@ -48,7 +48,7 @@
       <p class="about">
         I'm interested in stuff that goes fast--rockets, drones, planes, and bikes.
         I love breaking stuff in my garage at home or on the side of the road halfway across the country.
-        Currently in the works are my drone operator's license and a single-speed bike conversion.
+        Currently in the works are a thrust-vector controlled rocket and a 1991 Yamaha TW200 restoration.
         In the past, I've built a rocket that carries a GoPro, done some drone photography,
         biked across the country, and worked on various other personal projects.
       </p>
